--- a/frontend/src/sass/base/_colours.scss
+++ b/frontend/src/sass/base/_colours.scss
@@ -6,9 +6,9 @@
 // Colour Values
 $white: #ffffff;
 // 255 255 255
-$purple: #441144;
+$purple: #3b1d4a;
 // 59 29 74
-$pink: #DC0E54;
+$pink: #dc0e54;
 // 220 14 84
 $green: #809b29;
 // 128 155 41
