--- a/frontend/src/sass/base/_typography.scss
+++ b/frontend/src/sass/base/_typography.scss
@@ -2,11 +2,14 @@
    BASE / TYPOGRAPHY
    ================================= */
 
+
 .underline {
 	text-decoration: underline;
 }
 
-$lato: 'Lato', sans-serif;
-$font-weight: 100;
+// dropdown and front page hero panel
+$lato: Lato, sans-serif;
+
+// Front page
 $open-sans: 'Open Sans', sans-serif;
 
