--- a/frontend/src/sass/pages/_login.scss
+++ b/frontend/src/sass/pages/_login.scss
@@ -3,12 +3,8 @@
    ================================= */
 
 .page-login {
-    @extend .pnl--dark-txt;
+    @extend .pnl-dark-txt;
     padding-top: rem-calc(65); 
     padding-bottom: rem-calc(40);
     background-color: $white;
-
-    .pnl__title {
-    	color: $purple;
-    }
 }
