--- a/frontend/src/sass/utils/_mixins.scss
+++ b/frontend/src/sass/utils/_mixins.scss
@@ -19,6 +19,14 @@
 }
 
 
+@mixin centerer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 @mixin readmore {
     font-size: rem-calc(18);
     font-family: $open-sans;
