Tidy up the registration flow forms

--- a/frontend/src/sass/pages/_generic.scss
+++ b/frontend/src/sass/pages/_generic.scss
@@ -26,6 +26,9 @@
         background: $purple;
     }
 
+    &--terriatry {
+        background: $grey;
+    }
     &--primary,
     &--secondary {
         * {
