--- a/pimpmycause/pimpmycause/templates/core/become-a-partner.html
+++ b/pimpmycause/pimpmycause/templates/core/become-a-partner.html
@@ -21,7 +21,7 @@
     <section class="pnl pnl--triangle">
         <div class="content-wrap">
              <div class="row">
-                <div class="row clearfix padding-top-30 padding-bottom-30 partners">
+                <div class="clearfix padding-top-30 padding-bottom-30 partners">
                     <div class="small-12 medium-8 columns">
                         <h2 class="accent-color partners__title">Marketing Teams</h2>
                         <h3 class="margin-top-0 h4 partners__title">Build stronger marketing teams while helping good causes</h3>
@@ -31,7 +31,7 @@
                         <img class="margin-top-45" src="https://s3-eu-west-1.amazonaws.com/pimpmycause-images/custom-icons/partners-square.JPG" slt="Marketing Teams Icon Image">
                     </div>
                 </div>
-                <div class="row clearfix padding-top-30 padding-bottom-30">
+                <div class="clearfix padding-top-30 padding-bottom-30">
                     <div class="small-12 medium-4 columns hide-for-small-only">
                         <img class="margin-top-45" src="https://s3-eu-west-1.amazonaws.com/pimpmycause-images/custom-icons/team-square.JPG" alt="Agencies Icon Image">
                     </div>
@@ -41,7 +41,7 @@
                         <p class="partners__description--right">We showcase the service an agency would like to become better known for and find the ideal cause to take advantage of the pro bono support that is being offered.</p>
                     </div>
                 </div>
-                <div class="row clearfix padding-top-30 padding-bottom-30">
+                <div class="clearfix padding-top-30 padding-bottom-30">
                     <div class="small-12 medium-8 columns">
                         <h2 class="accent-color partners__title">Professional Organisations</h2>
                         <h3 class="margin-top-0 h4 partners__title">Increase member participation</h3>
@@ -59,7 +59,7 @@
         <div class="content-wrap">
              <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h1 class="pnl__title">Our Partners</h1>
+                    <h1 class="pnl__title" id="our-partners">Our Partners</h1>
                     <div class="row clearfix">
                         <p class="small-12 medium-8 large-8 large-centered medium-centered column text-align-center pnl--light-txt">We collaborate with the following organisations. <a href="{% url 'contact' %}" class="text-link">Get in touch</a> if you’d like to join us in Marketing a Better World.</p>
                     </div>
