--- a/pimpmycause/pimpmycause/templates/registration/registration_complete.html
+++ b/pimpmycause/pimpmycause/templates/registration/registration_complete.html
@@ -5,12 +5,14 @@
 {% load static %}
 
 {% block main %} 
-    <div class="page-register pnl">
+    <div class="page-login pnl">
         <div class="content-wrap">
-            <div class="row"> 
+            <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h1 class="pnl__title">Thanks!</h1>
-                   	<p class='large-6 large-offset-3 medium-6 small-12 columns'>Your registration is not yet complete, please check your email and activate your account by clicking the activation link.</p>
+                    <h1 class="pnl__title">Email Sent</h1>
+                    <div class="medium-6 large-6 small-12 large-centered small-centered columns">
+                   	    <p>Your registration is not yet complete, please check your email and activate your account by clicking the activation link.</p>
+                    </div>
                 </div>
             </div>   
         </div> 
